--- a/src/templates/index.fmpp.html
+++ b/src/templates/index.fmpp.html
@@ -707,7 +707,7 @@ range = 6400</pre>
       <p>If you replace <code>index.html</code> in your map URLs with <code>theme2.html</code>, then the ShadedBay 
 	  background theme will be used instead of the Superflat background theme.</p>
 	  
-	  <p>In the future I hope to add more themes, and other people are welcome to contribute. A theme consist of a background image than can compress reasonably small, and a background colour which is displayed under the background image (in case the image doesn't reach all the way to the bottom of the browser window).</p>
+	  <p>In the future I hope to add more themes, and other people are welcome to contribute. A theme consists of a background image than can compress reasonably small, and a background colour which is displayed under the background image (in case the image doesn't reach all the way to the bottom of the browser window).</p>
 
 	  <p><a href="${GoogleDriveUrl_mapGenerator}/theme2.html?googlesrc=${GoogleDriveId_example_txt}">Example map, using theme2</a></p>
 	  
