--- a/src/templates/index.fmpp.html
+++ b/src/templates/index.fmpp.html
@@ -70,6 +70,7 @@
 	
     animatedcollapse.addDiv('AddingOceans_optimizing',        'fade=1, speed=350');
 
+    animatedcollapse.addDiv('ExtraFeatures_iframes',          'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_overlays',         'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_backgroundThemes', 'fade=1, speed=250');	
     animatedcollapse.addDiv('ExtraFeatures_defaultsrc',       'fade=1, speed=350');
@@ -696,7 +697,15 @@ range = 6400</pre>
 	
 	<br/>
     <h1><a id="ExtraFeatures"></a>Extra features</h1>
+	
+    <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_iframes" title="iframe support"></@OpenCollapsableSection>
+    <#--<h2 style="clear:both;"><a id="ExtraFeatures_iframes"></a>iframe support</h2>-->
 
+      <p>You can include maps inside your own webpages by using iframes.</p>
+	
+	  <p><a href="iframes.html">iframe demonstration, with example HTML</a>.</p>
+
+    <@CloseCollapsableSection></@CloseCollapsableSection>	
     <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_overlays" title="Overlay icons"></@OpenCollapsableSection>
     <#--<h2 style="clear:both;"><a id="ExtraFeatures_overlays"></a>Overlay icons</h2>-->
 
@@ -902,6 +911,7 @@ range = 6400</pre>
 
         <a href="#ExtraFeatures">Extra features</a>
           <ul>
+          <li><a href="#ExtraFeatures_iframes">iframe support</a></li>
           <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
           <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting a default src</a></li>
@@ -939,7 +949,7 @@ range = 6400</pre>
           </tr>
           <tr>
             <#if enable_dynamic>
-              <td><a href="index_expanded.html">Fully expanded version (no javascript)</a></td>
+              <td><a href="index_expanded.html?click">Fully expanded version (no javascript)</a></td>
             <#else>
               <td><a href="index.html">Collapsable version (requires javascript)</a></td>
             </#if>
