Updates .zip links to latest version. Improves some html encoding (since it will be on display).

--- a/src/templates/iframes.fmpp.html
+++ b/src/templates/iframes.fmpp.html
@@ -54,16 +54,16 @@
 
 		<p>The map below has been inserted into this html page using an <a href="http://www.w3schools.com/html/html_iframe.asp">iframe</a>.</p>
 
-		<iframe width="390" height="410" src="${GoogleDriveUrl_mapGenerator}/iframeable.html?src=example.txt&range=4800&showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" ></iframe>
+		<iframe width="390" height="410" src="${GoogleDriveUrl_mapGenerator}/iframeable.html?src=example.txt&amp;range=4800&amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" ></iframe>
 				
 		<p>
 		<br/>
 		The HTML I used to display this map is:</p>
-			<pre>&lt;iframe width="390" height="410" src="${GoogleDriveUrl_mapGenerator}/<span style="color: red;">iframeable.html</span>?src=example.txt&amp;range=4800&amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
+			<pre>&lt;iframe width="390" height="410" src="${GoogleDriveUrl_mapGenerator}/<span style="color: red;">iframeable.html</span>?src=example.txt&amp;amp;range=4800&amp;amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
 		
 		<p>
 			Or, if you were hosting it yourself:
-			<pre>&lt;iframe width="390" height="410" src="<span style="color: red;">iframeable.html</span>?src=example.txt&amp;range=4800&amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
+			<pre>&lt;iframe width="390" height="410" src="<span style="color: red;">iframeable.html</span>?src=example.txt&amp;amp;range=4800&amp;amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
 		</p>
 		
 		
@@ -93,7 +93,7 @@
 			 
 		<h2>Example HTML for each size</h2>
 			 
-		<p>Small:<pre>&lt;iframe width="390" height="410" src="iframeable.html?src=example.txt&range=4800" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
+		<p>Small:<pre>&lt;iframe width="390" height="410" src="iframeable.html?src=example.txt&amp;amp;range=4800" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
 		</p>
 		
 		<p>Medium:<pre>&lt;iframe width="630" height="650" src="iframeable.html?src=example.txt" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
