--- a/src/templates/iframes.fmpp.html
+++ b/src/templates/iframes.fmpp.html
@@ -59,7 +59,7 @@
 		<p>
 		<br/>
 		The HTML I used to display this map is:</p>
-			<pre>&lt;iframe width="390" height="410" src="${GoogleDriveUrl_mapGenerator}/<span style="color: red;">iframeable.html</span>?src=example.txt&amp;amp;range=4800&amp;amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
+			<pre>&lt;iframe width="390" height="410" src="${GoogleDriveUrl_mapGenerator}/<span style="color: red;">iframeable.html</span>?googlesrc=${GoogleDriveId_example_txt}&amp;amp;range=4800&amp;amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
 		
 		<p>
 			Or, if you were hosting it yourself:
