Updated instructions to include targets in URLs

--- a/src/templates/iframes.fmpp.html
+++ b/src/templates/iframes.fmpp.html
@@ -54,6 +54,7 @@
 
 		<p>The map below has been inserted into this html page using an <a href="http://www.w3schools.com/html/html_iframe.asp">iframe</a>.</p>
 
+		<div style="font-size: 9pt; width: 390px; text-align: center">Use mousewheel to zoom, drag to scroll<br/>(Keyboard focus is unreliable in iframes)</div>
 		<iframe width="390" height="410" src="${GoogleDriveUrl_mapGenerator}/iframeable.html?src=example.txt&amp;range=4800&amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" ></iframe>
 				
 		<p>
