misc fixes to instructions

--- a/src/templates/index.fmpp.html
+++ b/src/templates/index.fmpp.html
@@ -247,7 +247,7 @@
 
     <!--<@OpenCollapsableSection headingLevel="2" id="FromDropbox" title="Or run it from your Dropbox, or a wiki page." collapsed="false"></@OpenCollapsableSection>-->
 
-      <h2><a id="FromDropbox"></a>Run it from your Dropbox, or a wiki page.</h2>
+      <h2><a id="FromDropbox"></a>or run it from your Dropbox, or a wiki page.</h2>
 
       <p>Example <a href="dropbox.html">using Dropbox</a>.</p>
 
@@ -270,7 +270,7 @@
       <h2><a id="Trust"></a>Can I trust this to not disappear after I've started using it?</h2>
 
       <div style="float: right">
-      <a href="https://github.com/Treer/minecraft-map/archive/v1.71.zip" class="downloadbutton">
+      <a href="${zipDownloadLink}" class="downloadbutton">
               <small>Download</small>
               .zip file
             </a>
@@ -297,7 +297,7 @@
 
     <p><a href="${GoogleDriveUrl_mapGenerator}/example.txt">An example location-list file.</a></p>
 
-    <p><a href="${GoogleDriveUrl_mapGenerator}/template.txt">A template location-list file.</a></p>
+    <p><a href="${GoogleDriveUrl_mapGenerator}/template/locationsfiletemplate.txt">A template location-list file.</a></p>
 
     <p>You can <a href="exportfromseed.html">automatically generate your location-list file</a> if you know the seed for the world.</p>
 
@@ -895,7 +895,7 @@ range = 6400</pre>
           <li><a href="#Trust">Or download source</a></li>
           </ul>
 
-        <a href="#LocationListFormat">Making a location list file</a>
+        <a href="#LocationListFormat">Making a location-list file</a>
           <ul>
           <!--<li><a href="#locationColumns">Location columns</a></li>-->
           <li><a href="#locationTypes_heading">type</a></li>
@@ -922,14 +922,16 @@ range = 6400</pre>
           <li><a href="#settings_oceantheme_heading">oceantheme</a></li>
           </ul>
 
-        <a href="#AddingOceans">Showing oceans</a>
+        <a href="#AddingOceans">Oceans</a>
           <ul>
+          <li><a href="#AddingOceans">Showing oceans</a></li>
           <li><a href="#AddingOceans_optimizing_heading">Optimizing load times</a></li>
+          <li><a href="exportfromseed.html">AMIDST Exporter</a></li>
           </ul>
 
         <a href="#ExtraFeatures">Extra features</a>
           <ul>
-          <li><a href="#ExtraFeatures_iframes">iframe support</a></li>
+          <li><a href="#ExtraFeatures_iframes_heading">iframe support</a></li>
           <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
           <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting a default src</a></li>
