--- a/src/templates/index.fmpp.html
+++ b/src/templates/index.fmpp.html
@@ -70,6 +70,7 @@
 	
     animatedcollapse.addDiv('AddingOceans_optimizing',        'fade=1, speed=350');
 
+    animatedcollapse.addDiv('ExtraFeatures_posters',          'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_iframes',          'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_overlays',         'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_backgroundThemes', 'fade=1, speed=250');	
@@ -713,6 +714,25 @@ range = 6400</pre>
 	<br/>
     <h1><a id="ExtraFeatures"></a>Extra features</h1>
 	
+	
+    <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_posters" title="Poster prints" collapsed="false"></@OpenCollapsableSection>
+    <#--<h2 style="clear:both;"><a id="ExtraFeatures_posters"></a>Poster prints</h2>-->
+
+	  <div style="float:right;">
+        <a href="posters.html">
+          <img src="images/wallmap-small.jpg" width="400" height="288" alt="printed wall map"/>
+		</a>
+      </div>
+	
+      <p>Instead of scrolling around fully zoomed in, the entire map can be printed out as a large poster.</p>
+
+      <p>When viewing a map online, there's a small icon at the bottom-left corner of the screen, clicking on that brings up options for make a poster sized image of the map.</p>
+	  
+	  <p>Here's the <a href="posters.html">poster I made from our server's map</a>, and how I made it.</p>
+	  
+	  <br style="clear:both;" />
+
+    <@CloseCollapsableSection></@CloseCollapsableSection>		
     <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_iframes" title="iframe support"></@OpenCollapsableSection>
     <#--<h2 style="clear:both;"><a id="ExtraFeatures_iframes"></a>iframe support</h2>-->
 
@@ -721,29 +741,6 @@ range = 6400</pre>
 	  <p><a href="iframes.html">iframe demonstration, with example HTML</a>.</p>
 
     <@CloseCollapsableSection></@CloseCollapsableSection>	
-    <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_overlays" title="Overlay icons"></@OpenCollapsableSection>
-    <#--<h2 style="clear:both;"><a id="ExtraFeatures_overlays"></a>Overlay icons</h2>-->
-
-      <p>Overlays are where a map location overlays more than one icon to represent itself, for example the island icon can be combined 
-	  with the mushroom icon to show a mushroom island.</p>
-	
-      <p>Documentatin yet to come...</p>
-
-      <p>Until I write this section, you can have a look near the bottom of the <a href="${GoogleDriveUrl_mapGenerator}/legend.txt">legend.txt</a>
-      file - it <a href="${GoogleDriveUrl_mapGenerator}/index.html?src=legend.txt">implements</a> overlays - see the bottom right corner.</p>
-
-    <@CloseCollapsableSection></@CloseCollapsableSection>
-    <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_backgroundThemes" title="Background themes"></@OpenCollapsableSection>
-    <#--<h2 style="clear:both;"><a id="ExtraFeatures_backgroundThemes"></a>Background themes</h2>-->
-
-      <p>If you replace <code>index.html</code> in your map URLs with <code>theme2.html</code>, then the ShadedBay 
-	  background theme will be used instead of the Superflat background theme.</p>
-	  
-	  <p>In the future I hope to add more themes, and other people are welcome to contribute. A theme consists of a background image than can compress reasonably small, and a background colour which is displayed under the background image (in case the image doesn't reach all the way to the bottom of the browser window).</p>
-
-	  <p><a href="${GoogleDriveUrl_mapGenerator}/theme2.html?googlesrc=${GoogleDriveId_example_txt}">Example map, using theme2</a></p>
-	  
-    <@CloseCollapsableSection></@CloseCollapsableSection>
     <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_defaultsrc" title="Setting a default <span class=\"setting\">src</span>, so URL arguments aren't necessary"></@OpenCollapsableSection>
     <#--<h2 style="clear:both;"><a id="ExtraFeatures_defaultsrc"></a>Setting a default <span class=\"setting\">src</span>, so URL arguments aren't necessary</h2>-->
 
@@ -780,6 +777,29 @@ range = 6400</pre>
 	  <p>Now <span class="setting">oceansrc</span> will no longer be needed.</p>
 	  
     <@CloseCollapsableSection></@CloseCollapsableSection>	
+    <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_backgroundThemes" title="Background themes"></@OpenCollapsableSection>
+    <#--<h2 style="clear:both;"><a id="ExtraFeatures_backgroundThemes"></a>Background themes</h2>-->
+
+      <p>If you replace <code>index.html</code> in your map URLs with <code>theme2.html</code>, then the ShadedBay 
+	  background theme will be used instead of the Superflat background theme.</p>
+	  
+	  <p>In the future I hope to add more themes, and other people are welcome to contribute. A theme consists of a background image than can compress reasonably small, and a background colour which is displayed under the background image (in case the image doesn't reach all the way to the bottom of the browser window).</p>
+
+	  <p><a href="${GoogleDriveUrl_mapGenerator}/theme2.html?googlesrc=${GoogleDriveId_example_txt}">Example map, using theme2</a></p>
+	  
+    <@CloseCollapsableSection></@CloseCollapsableSection>
+    <@OpenCollapsableSection headingLevel="2" id="ExtraFeatures_overlays" title="Overlay icons"></@OpenCollapsableSection>
+    <#--<h2 style="clear:both;"><a id="ExtraFeatures_overlays"></a>Overlay icons</h2>-->
+
+      <p>Overlays are where a map location overlays more than one icon to represent itself, for example the island icon can be combined 
+	  with the mushroom icon to show a mushroom island.</p>
+	
+      <p>Documentatin yet to come...</p>
+
+      <p>Until I write this section, you can have a look near the bottom of the <a href="${GoogleDriveUrl_mapGenerator}/legend.txt">legend.txt</a>
+      file - it <a href="${GoogleDriveUrl_mapGenerator}/index.html?src=legend.txt">implements</a> overlays - see the bottom right corner.</p>
+
+    <@CloseCollapsableSection></@CloseCollapsableSection>
 	
 	<br/>
     <h1><a id="Tips"></a>Tips</h1>
@@ -885,8 +905,9 @@ range = 6400</pre>
       <div class="contents">
 
         <h1>What's new:</h1>
-          <ul>
-          <li><a href="iframes.html" style="color: red">iframe support</a></li>
+          <ul
+          <li><a href="#ExtraFeatures_posters_heading" style="color: red">Poster prints</a></li>		  
+          <li><a href="iframes.html" style="color: #bb0000">iframe support</a></li>
           <li><a href="https://raw.githubusercontent.com/Treer/minecraft-map/master/changlog.txt">See full change-log</a></li>
           </ul>	  
 	  
@@ -934,11 +955,12 @@ range = 6400</pre>
 
         <a href="#ExtraFeatures">Extra features</a>
           <ul>
+          <li><a href="#ExtraFeatures_posters_heading">Poster prints</a></li>
           <li><a href="#ExtraFeatures_iframes_heading">iframe support</a></li>
-          <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
-          <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting a default src</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting default oceansrc</a></li>
+          <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
+          <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
           </ul>
 		  
 		  
